add_event - messing around with the Google Maps and markers

--- a/templates/add_event.htm
+++ b/templates/add_event.htm
@@ -52,8 +52,8 @@
         I'd like to <span class='emphasize'>sit next to</span>
         <input type="text" id="skill_neighbor" name="skill_neighbor"></input>.
 
-            <input type="hidden" id="loc_geopt_lat" name="loc_geopt_lat"></input>
-            <input type="hidden" id="loc_geopt_lng" name="loc_geopt_lng"></input>
+            <input type1="hidden" id="loc_geopt_lat" name="loc_geopt_lat"></input>
+            <input type1="hidden" id="loc_geopt_lng" name="loc_geopt_lng"></input>
     </div>
     <div>
         <input type="submit" id="do_submit" value="Add"/>
