--- a/templates/base.htm
+++ b/templates/base.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link type="text/css" rel="stylesheet" href="stylesheets/general_style.css" />
+    <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css" />
     <script type="text/javascript" src="JS/jquery-1.6.2.min.js"></script>
 	{% block head %}
 	{% endblock %}
