--- a/templates/add_event.htm
+++ b/templates/add_event.htm
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="http://code.google.com/apis/gears/gears_init.js"></script>
 	<script type="text/javascript" src="/JS/add_event.js"></script>
 	<script type="text/javascript" src="/JS/search_map.js"></script>
+	<script type="text/javascript" src="/JS/bootstrap-modal.js"></script>
     <script type="text/javascript">
 	$(function () {
 		init_map_stuff();
@@ -26,39 +27,61 @@
 {% endblock %}
 
 {% block main %}
-    <div class="statement">
-        Hi.  My <span class='emphasize'>name</span> is 
-        <input type="text" id="who_name" name="who_name"></input>.<br/>
-        I'll be at 
-        <input type="text" id="where" name="where" value="where?" />
-        <div id="map_success"   style="display:none;color:white;padding:10px;background-color:green;">hello</div>
-        <div id="map_error"     style="display:none;color:white;padding:10px;background-color:red;">hello</div>
+<div id="map-overlay" class="modal hide fade" style="display: none; ">
+            <div class="modal-header">
+              <a href="#" class="close">×</a>
+              <h3>Modal Heading</h3>
+            </div>
+            <div class="modal-body">
+		        <input type="text" id="where" name="where" value="where?" />
+		        <div id="map_success"   style="display:none;color:white;padding:10px;background-color:green;">hello</div>
+		        <div id="map_error"     style="display:none;color:white;padding:10px;background-color:red;">hello</div>
 
-		<input type="button" name="searchBtn" id="searchBtn" value="Search" />
-        <input type="button" name="findMeBtn" id="findMeBtn" value="Find Me" />
-        <div id="searchResults"></div>
-        <div id="map_canvas" ></div>
+				<button class="btn" name="searchBtn" id="searchBtn" value="Search">Search</button>
+		        <button class="btn" name="findMeBtn" id="findMeBtn" value="Find Me">Find Me!</button>
+		        <div id="searchResults"></div>
+		        <div id="map_canvas" ></div>
+            </div>
+            <div class="modal-footer">
+              <a href="#" class="btn primary">Primary</a>
+              <a href="#" class="btn secondary">Secondary</a>
+            </div>
+          </div>
 
-        where I'll be
-        <input type="text" id="what" name="what" value="working on what?"></input>.
-        I'll be there from
-        <input type="text" id="when_start" name="when_start" ></input>
-        to 
-        <input type="text" id="when_end" name="when_end" ></input>
-        .<br/>
-        I <span class='emphasize'>know</span> 
-        <input type="text" id="skill"vname="skill"></input>
-        .<br/>
-        I'd like to <span class='emphasize'>sit next to</span>
-        <input type="text" id="skill_neighbor" name="skill_neighbor"></input>.
 
-            <input type1="hidden" id="loc_geopt_lat" name="loc_geopt_lat"></input>
-            <input type1="hidden" id="loc_geopt_lng" name="loc_geopt_lng"></input>
-    </div>
-    <div>
-        <input type="submit" id="do_submit" value="Add"/>
-    </div>
-	<div id="out_str" />
+<div class="statement">
+    Hi.  My <span class='emphasize'>name</span> is 
+    <input type="text" id="who_name" name="who_name"></input>.<br/>
+    <hr/>I'll be at 
+	<div id="location_name">Location Not Set</div>
 
-    <a href='/home'>Back</a>
+	<button data-controls-modal="map-overlay" data-backdrop="true" data-keyboard="true" class="btn danger">Set Location</button>
+	<hr/>
+    I'll be
+    <input type="text" id="what" name="what" value="working on what?"></input>.
+    <hr/>
+	I'll be there from
+    <input type="text" id="when_start" name="when_start" ></input>
+    to 
+    <input type="text" id="when_end" name="when_end" ></input>
+    .<hr/>
+    I <span class='emphasize'>know</span> 
+    <input type="text" id="skill"vname="skill"></input>
+    .
+	<hr/>
+	I'd like to <span class='emphasize'>sit next to</span>
+    <input type="text" id="skill_neighbor" name="skill_neighbor"></input>.
+	<hr/>
+    <button class="btn" id="do_submit">Add</button>
+	<a href="/"><button class="btn">Cancel</button></a>
+</div>
+<div id="out_str"></div>
+
+
+
+<hr/>
+<div style="margin-top:100px">
+<input type1="hidden" id="loc_geopt_lat" name="loc_geopt_lat"></input>
+<input type1="hidden" id="loc_geopt_lng" name="loc_geopt_lng"></input>
+</div>
 {% endblock %}
