--- a/templates/base.htm
+++ b/templates/base.htm
@@ -96,11 +96,10 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="/">WorkWithMe</a>
           <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+			{% block nav%}
+			{% endblock %}
           </ul>
           <form action="" class="pull-right">
             <input class="input-small" type="text" placeholder="Username">
@@ -115,7 +114,7 @@
 
       <div class="content">
         <div class="page-header">
-          <h1>Who are you?<br/><small>Tell the world what you're up to.</small></h1>
+          <h1>Whachadoin?<br/><small>Tell the world what, where, and when you're up to.</small></h1>
         </div>
         <div class="row">
           <div class="span10">
@@ -123,7 +122,8 @@
 			{% endblock %}
           </div>
           <div class="span4">
-            <h3>Secondary content</h3>
+			{% block right_col %}
+			{% endblock %}
           </div>
         </div>
       </div>
