--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,5 +1,10 @@
 {% extends "base.htm" %}
 
+{% block nav%}
+<li><a href="/add">Post</a></li>
+<li><a href="/browse">Browse</a></li>
+{% endblock %}
+
 {% block main %}
 Welcome to WorkWithMe.  From here you should be able to:
 <ul>
