--- a/templates/browse_all.htm
+++ b/templates/browse_all.htm
@@ -1,4 +1,10 @@
 {% extends "base.htm" %}
+
+{% block nav%}
+<li><a href="/add">Post</a></li>
+<li class="active"><a href="/browse">Browse</a></li>
+{% endblock %}
+
 {% block head %}
 <style>
 
