--- a/templates/add_event.htm
+++ b/templates/add_event.htm
@@ -10,6 +10,13 @@
     <!-- Google MAPS API -->
     <style type="text/css">
         #map_canvas { height: 200px; width:100%; }
+		.find_step {margin-bottom:4px;margin-top:4px}
+		#map_success {display:none;color:white;padding:2px 10px 2px 10px;background-color:green;}
+		#map_success h3 {color:white;font-size:10pt;}
+		#map_working {display:none;color:white;padding:2px 10px 2px 10px;background-color:orange;}
+		#map_error   {display:none;color:white;padding:2px 10px 2px 10px;background-color:red;}
+		.find_step input {width:100%}
+		.hidden { display:none}
         </style>
     <!--
     <script type="text/javascript"
@@ -27,6 +34,7 @@
 		init_add_event();
 		
 		$('#map-overlay').bind('shown', function () {
+		  $("#searchResults").hide();
 		  init_map_stuff();
 		  initMyExistingPosition();
 		})
@@ -56,20 +64,28 @@
               <h3>Where are you?</h3>
             </div>
             <div class="modal-body">
-		        <input type="text" id="where" name="where" value="Starbucks" />
-		        <div id="map_success"   style="display:none;color:white;padding:10px;background-color:green;">hello</div>
-		        <div id="map_error"     style="display:none;color:white;padding:10px;background-color:red;">hello</div>
-
-				<button class="btn" name="searchBtn" id="searchBtn" value="Search">Search</button>
-		        <button class="btn" name="findMeBtn" id="findMeBtn" value="Find Me">Find Me!</button>
-		        <div id="searchResults"></div>
 		        <div id="map_canvas" ></div>
+		        <div id="map_success"></div>
+		        <div id="map_working">
+		        	Looking for your loaction...		
+		        </div>
+		        <div id="map_error"></div>
 				
-		        <input type="text" id="new_where_name" name="new_where_name" value="name of the place" />
-		        <br/>
-				<input type="text" id="new_where_addr" name="new_where_addr" value="address"  />
-		        <br/>
-				<input type="text" id="new_where_detail" name="new_where_detail" value="add a comment?" />
+				<div class="find_step" >
+					1.  Search for the place/address where you are:<br/>
+			        <input type="text" id="where" name="where" value="Starbucks" />
+					<button class="btn" name="searchBtn" id="searchBtn" value="Search">Search</button>
+			        <div id="searchResults"></div>
+				</div>
+				<div class="find_step hidden" id="step_confirm">
+					2.  Confirm the location:
+					<br/>
+			        <input type="text" id="new_where_name" name="new_where_name" value="name of the place" />
+			        <br/>
+					<input type="text" id="new_where_addr" name="new_where_addr" value="address"  />
+			        <br/>
+					<input type="text" id="new_where_detail" name="new_where_detail" value="add a comment?" />
+				</div>
 				<input type="hidden" id="new_loc_geopt_lat" name="new_loc_geopt_lat"></input>
 				<input type="hidden" id="new_loc_geopt_lng" name="new_loc_geopt_lng"></input>
 				
