--- a/templates/base.htm
+++ b/templates/base.htm
@@ -15,6 +15,7 @@
     <!-- Le styles -->
    <script type="text/javascript" src="JS/jquery-1.6.2.min.js"></script>
     <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css" />
+	<link type="text/css" rel="stylesheet" href="stylesheets/general_style.css" />
     <style type="text/css">
       /* Override some defaults */
       html, body {
@@ -101,11 +102,9 @@
 			{% block nav%}
 			{% endblock %}
           </ul>
-          <form action="" class="pull-right">
-            <input class="input-small" type="text" placeholder="Username">
-            <input class="input-small" type="password" placeholder="Password">
-            <button class="btn" type="submit">Sign in</button>
-          </form>
+		  <div class="pull-right">
+			{{ greeting }}
+		  </div>
         </div>
       </div>
     </div>
