Added profiles for users

--- a/templates/base.htm
+++ b/templates/base.htm
@@ -13,9 +13,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-   <script type="text/javascript" src="JS/jquery-1.6.2.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css" />
-	<link type="text/css" rel="stylesheet" href="stylesheets/general_style.css" />
+   <script type="text/javascript" src="/JS/jquery-1.6.2.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
+	<link type="text/css" rel="stylesheet" href="/stylesheets/general_style.css" />
     <style type="text/css">
       /* Override some defaults */
       html, body {
@@ -69,11 +69,12 @@
 
     </style>
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    <!--
+    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
+	 Le fav and touch icons -->
 	{% block head %}
 	{% endblock %}
 	
