--- a/stylesheets/general_style.css
+++ b/stylesheets/general_style.css
@@ -19,3 +19,4 @@ body {background:#232323; padding:60px; font-family:Arial;}
 	padding:10px 10px 10px 11px;
 	
 }
+.item_prop {font-weight:bold;text-decoration:underline}
