--- a/templates/browse_all.htm
+++ b/templates/browse_all.htm
@@ -9,7 +9,6 @@
 <style>
 	#map_canvas { height: 300px; width:100%; }
 
-    .item {font-weight:bold;text-decoration:underline}
 	.map_info_who { font-weight:bold}
 	.map_info_place_name { text-decoration:italic}
 	.map_info_addressP{ font-size:5px	}
@@ -68,21 +67,7 @@ $(function () {
 <div id="map_canvas" ></div>
 
     {% for event in events %}
-    <p>
-			<span class='item'>{{event.who_name}}</span>
-	        is 
-	        <span class='item'>{{event.what}}</span>
-	        at
-	        <span class='item'>{{event.whwhere}}</span>
-	        from 
-	        <span class='item'>{{event.when_start}}</span>
-	        to 
-	        <span class='item'>{{event.when_end}}</span>
-	        , who knows 
-	        <span class='item'>{{event.skill}}</span>
-	        and would like to sit next to
-	        <span class='item'>{{event.skill_neighbor}}</span>.
-	</p>
+		{% include "event_snip.htm" %}
     {% endfor %}
     Display map
     <a href='/home'>Back</a>
