Lots of changes... Full cycle supported.

--- a/stylesheets/general_style.css
+++ b/stylesheets/general_style.css
@@ -20,3 +20,5 @@ body {background:#232323; padding:60px; font-family:Arial;}
 	
 }
 .item_prop {font-weight:bold;text-decoration:underline}
+
+.hidden { display:none}
