--- a/templates/event.htm
+++ b/templates/event.htm
@@ -1,9 +1,10 @@
 {% extends "base.htm" %}
 
 {% block nav%}
-<li id="browse"><a href="/browse">Browse</a></li>
-<li id="add"><a href="/add">Post</a></li>
 <li id="event" class="active"><a href="#">Event</a></li>
+{% endblock %}
+
+{% block header %}
 {% endblock %}
 
 {% block main %}
