--- a/templates/event_snip.htm
+++ b/templates/event_snip.htm
@@ -11,7 +11,7 @@
         is 
         <span class='item_prop'>{{event.what}}</span>
         at
-        <span class='item_prop'>{{event.whwhere}}</span>
+        <span class='item_prop'>{{event.where_name}}</span>
         from 
         <span class='item_prop'>{{event.when_start}}</span>
         to 
