--- a/templates/add_event.htm
+++ b/templates/add_event.htm
@@ -2,31 +2,39 @@
 
 
 {% block nav%}
-<li class="active"><a href="#">Post</a></li>
-<li><a href="/browse">Browse</a></li>
 {% endblock %}
+
+{% block header %}
+<h1>What are you up to?</h1>
+{% endblock %}
+
 
 {% block head %}
     <!-- Google MAPS API -->
     <style type="text/css">
         #map_canvas { height: 200px; width:100%; }
 		.find_step {margin-bottom:4px;margin-top:4px}
-		#map_success {display:none;color:white;padding:2px 10px 2px 10px;background-color:green;}
 		#map_success h3 {color:white;font-size:10pt;}
-		#map_working {display:none;color:white;padding:2px 10px 2px 10px;background-color:orange;}
-		#map_error   {display:none;color:white;padding:2px 10px 2px 10px;background-color:red;}
 		.find_step input {width:100%}
-		.hidden { display:none}
 		#where {width:435px;}
 		#searchBtn {width:80px}
-		#searchResults { overflow: scroll; height:70px; padding: 4px; background:#eee; margin-top:4px}
+		#searchResults { overflow: scroll; height:70px; padding: 4px; margin-top:4px}
 		#searchResults ul { list-style-type: none; margin-left: 2px;}
 		#searchResults ul>li { margin-top:2px;}
+		#searchResults .btn { margin:1px; padding:1px 2px 1px 2px}
 		#searchResults .address {margin-left:5px;}
 		#findMeBtn {float:right;}
-
+		.statement .wide {width:50%}
 		
-        </style>
+		.address_box {margin-top:2px; padding:5px; margin-right:15px;}
+
+		.address_box input {border:0;-webkit-box-shadow:none;color:gray;font-size:9pt;}
+		.place_name {font-weight:bold; padding-bottom:0px; margin-bottom:0px;}
+		.place_address {padding-top:0px; margin-top:0px;}
+		
+		.find_loc_btn { float:right; margin-right:40px;}
+        .step {margin-top:4px;}
+		</style>
     <!--
     <script type="text/javascript"
         src="http://maps.googleapis.com/maps/api/js?sensor=true">
@@ -39,18 +47,27 @@
 	<script type="text/javascript" src="/JS/search_map.js"></script>
 	<script type="text/javascript" src="/JS/bootstrap-modal.js"></script>
     <script type="text/javascript">
+
+	function  findMeForAdd()
+	{
+    	findMeFnc( function(){
+			findPlacesNear( myLoc );
+			});		
+	}
+	
 	$(function () {
+		$("#nav_post").addClass( "active");
 		init_add_event();
 		
 		$('#map-overlay').bind('shown', function () {
 		  $("#searchResults").hide();
-		  init_map_stuff();
-		  initMyExistingPosition();
+		  init_map_stuff( findMeForAdd );
 		})
 		
 		$('#btn_map_note_here').click( function(){
 			applyMyNewPosition();
 			$('#map-overlay').modal( 'hide' );
+			$( "#address_box_error" ).slideUp( 'fast');
 		});
 
 		$('#btn_map_cancel').click( function(){
@@ -72,19 +89,18 @@
               <a href="#" class="close">×</a>
             </div>
             <div class="modal-body">
-				<div><button class='btn' name='findMeBtn' id='findMeBtn' value='Find Me' onclick='findMeFnc()'>Find Me Again!</button> </div>
+				<div><button class='btn' name='findMeBtn' id='findMeBtn' value='Find Me' onclick='findMeForAdd()'>Find Me Again!</button> </div>
+
 		        <div id="map_canvas" ></div>
-		        <div id="map_success"></div>
-		        <div id="map_working">
-		        	Looking for your loaction...		
-		        </div>
-		        <div id="map_error"></div>
+				<div id="map_success" class="alert-message success hidden"></div>
+				<div id="map_working"  class="alert-message info hidden "></div>
+				<div id="map_error"  class="alert-message error hidden"></div>
 				
 				<div class="find_step" >
 					2.  Search for the place/address where you are:<br/>
-			        <input type="text" id="where" name="where" value="Starbucks" />
+			        <input type="text" id="where" name="where" placeholder="Click to search for an address or a place..." />
 					<button class="btn" name="searchBtn" id="searchBtn" value="Search">Search</button>
-			        <div id="searchResults"></div>
+			        <div id="searchResults" class="alert-message block-message info"></div>
 				</div>
 				<div class="find_step hidden" id="step_confirm">
 					3.  Confirm the location:
@@ -92,8 +108,6 @@
 			        <input type="text" id="new_where_name" name="new_where_name" value="name of the place" />
 			        <br/>
 					<input type="text" id="new_where_addr" name="new_where_addr" value="address"  />
-			        <br/>
-					<input type="text" id="new_where_detail" name="new_where_detail" value="add a comment?" />
 				</div>
 				<input type="hidden" id="new_loc_geopt_lat" name="new_loc_geopt_lat"></input>
 				<input type="hidden" id="new_loc_geopt_lng" name="new_loc_geopt_lng"></input>
@@ -107,39 +121,67 @@
 
 
 <div class="statement">
-    Hi.  My <span class='emphasize'>name</span> is 
-    <input type="text" id="who_name" name="who_name" value="{% if user%}{{user.username}}{% endif%}"></input>.
-<div id="#who_name_error" class="hide"></div><br/>
-    <hr/>I'll be at 
 
-	<button data-controls-modal="map-overlay" data-backdrop="true" data-keyboard="true" class="btn">Find Location</button>
-	<div>
-		<input type="text" id="where_name" name="where_name" value="name of the place" readonly />
-    	<br/>
-		<input type="text" id="where_addr" name="where_addr" value="address" readonly/>
+	<div class="step">
+ 	   Hi.  My <span class='emphasize'>name</span> is
+			{% if not user %}
+	    		<input type="text" class="wide" id="who_name" name="who_name" placeholder="Mr. Awesome" value="{{old_event.who_name}}"></input>
+			{% else %}
+				{{ username }}
+	    		<input type="hidden" id="who_name" name="who_name" value="{{user.username}}"></input>
+			{% endif %}.
+		<div id="who_name_error" class="hide alert-message error"></div>
+	</div>	
+	
+	<div class="step">
+	    I'll be at 
+		<button data-controls-modal="map-overlay" data-backdrop="true" data-keyboard="true" class="btn find_loc_btn">Find Location</button>
+
+		<div class="address_box well">
+			<input type="text" class="wide place_name" id="where_name" name="where_name" value="{{old_event.where_name}}" readonly />
+	    	<br/>
+			<input type="text" class="wide place_address" id="where_addr" name="where_addr" value="{{old_event.where_addr}}" readonly/>
+			<div id="address_box_error" class="hide alert-message error" style="margin-bottom:0"></div>
+		</div>
+
 	</div>
-    <br/><input type="text" id="where_detail" name="where_detail" value="Are you stuck between the piano and the barista?" />
-	<input type="hidden" id="loc_geopt_lat" name="loc_geopt_lat"></input>
-	<input type="hidden" id="loc_geopt_lng" name="loc_geopt_lng"></input>
+	
+	<div class="step">
+	    I'll be <input type="text" class="wide" id="where_detail" name="where_detail" placeholder="stuck between a piano and a barista" value="{{old_event.where_detail}}" />.
+		<input type="hidden" id="loc_geopt_lat" name="loc_geopt_lat" value="{{old_event.where_loc_lat}}"></input>
+		<input type="hidden" id="loc_geopt_lng" name="loc_geopt_lng" value="{{old_event.where_loc_lng}}"></input>
+		<input type="hidden" id="username" name="username" value="{{username}}"></input>
+	</div>
 
-	<hr/>
+	<div class="step">
     I'll be
-    <input type="text" id="what" name="what" value="working on what?"></input>.
-    <hr/>
-	I'll be there from
-    <input type="text" id="when_start" name="when_start" ></input>
-    to 
+    <input type="text" class="wide" id="what" name="what" value="{{old_event.what}}"placeholder="coding/designing/brainstorming up a storm"></input>.
+	</div>
+	
+	<div class="step">
+	I'll be there from now 
+    <input type="hidden" id="when_start" name="when_start" value='now' placeholder="start time"></input>
+    until
     <input type="text" id="when_end" name="when_end" ></input>
-    .<hr/>
-    I <span class='emphasize'>know</span> 
-    <input type="text" id="skill"vname="skill"></input>
     .
-	<hr/>
-	I'd like to <span class='emphasize'>sit next to</span>
-    <input type="text" id="skill_neighbor" name="skill_neighbor"></input>.
-	<hr/>
-    <button class="btn" id="do_submit">Add</button>
-	<a href="/"><button class="btn">Cancel</button></a>
+	</div>
+	<div id="when_end_error" class="hide alert-message error"></div>
+	
+	<div class="step">
+    	I <span class='emphasize'>know</span> 
+    	<input type="text" class="wide" id="skill" name="skill" value="{{old_event.skill}}" placeholder="design, PHP, juggling..."></input>
+    .
+	</div>
+	
+	<div class="step">
+		I'd like to <span class='emphasize'>sit next to</span>
+    	<input type="text" class="wide" id="skill_neighbor" name="skill_neighbor" value="{{old_event.skill_neighbor}}" placeholder="designers, hot girls, therapists..."></input>.
+	</div>
+	
+	<div class="step">
+    	<button class="btn" id="do_submit">Add</button>
+		<a href="/"><button class="btn">Cancel</button></a>
+	</div>
 </div>
 <div id="out_str"></div>
 
