--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,19 +1,20 @@
 {% extends "base.htm" %}
 
 {% block nav%}
-<li><a href="/add">Post</a></li>
-<li><a href="/browse">Browse</a></li>
+{% endblock %}
+
+{% block header %}
+	<h1>Hello there!<br/>
+	<small>Work next to like-minded people...</small></h1>
 {% endblock %}
 
 {% block main %}
 Welcome to WorkWithMe.  From here you should be able to:
-<ul>
+<ul class="media-grid">
     <li><a href='browse'>Browse ALL</a></li>
-    <li>Me</li>
-    <ul>
-    <li>Now</li>
+    <li><a href='#'>Me</a></li>
+    <li><a href='#'>Now</a></li>
     <li><a href='add'>Add</a></li>
-    <li>All</li>
-    </ul>
+    <li><a href='#'>All</a></li>
 </ul>
 {% endblock %}
