--- a/templates/user.htm
+++ b/templates/user.htm
@@ -1,18 +1,52 @@
 {% extends "base.htm" %}
 
 {% block nav%}
-<li id="browse"><a href="/browse">Browse</a></li>
-<li id="add"><a href="/add">Post</a></li>
-<li id="user" class="active"><a href="#">User</a></li>
+	{% if not user_is_me %}
+		<li id="nav_user" class="active"><a href="#">{{user_to_view.username}}</a></li>
+	{% endif %}
+{% endblock %}
+
+{% block head %}
+<script type="text/javascript">
+$(function(){
+	{% if user_is_me %}
+	$("#nav_me").addClass( "active");
+	{% endif %}
+});
+
+</script>
+{% endblock %}
+
+{% block header %}
+	<h1>{{user_to_view.username}}</h1>
 {% endblock %}
 
 {% block main %}
-This page is for {{user.username}}.
-{% if isadmin %}
-	<a class="btn" href="/add">Submit</a>
-{% endif %}
-<hr/>
-	{% for event in events %}
+<div class="alert-message block-message success">
+		{% if events %}
+			{% for event in events %}
+				{% include "event_snip.htm" %}
+			{% endfor %}
+		{% else %}
+		Uhhh...  not doing anything at the moment.
+		{% endif %}
+	<div class="alert-actions">
+	{% if user_is_me %}
+		{% if events %}
+		<form style="display:inline-block" action="/user/{{user.username}}/closeout" method="post">
+			<input class="btn" type="submit" value="I am done" />
+		</form>
+		{% endif %}
+		<a class="btn" href="/add">Update My Status</a>
+	{% endif %}
+	</div>
+
+</div>
+
+<h3>Archive:</h3>
+
+	{% for event in old_events %}
 		{% include "event_snip.htm" %}
 	{% endfor %}
+	
 {% endblock %}
