--- a/templates/base.htm
+++ b/templates/base.htm
@@ -13,7 +13,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-   <script type="text/javascript" src="/JS/jquery-1.6.2.min.js"></script>
+    <script type="text/javascript" src="/JS/jquery-1.6.2.min.js"></script>
+	<script type="text/javascript" src="/JS/date.js"></script>
+	<script type="text/javascript" src="/JS/default_scripts.js"></script>
     <link type="text/css" rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
 	<link type="text/css" rel="stylesheet" href="/stylesheets/general_style.css" />
     <style type="text/css">
@@ -144,7 +146,7 @@
       </div>
 
       <footer>
-        <p>&copy; Company 2011</p>
+        <p>&copy; WorkWithMe.org 2011</p>
       </footer>
 
     </div> <!-- /container -->
