--- a/templates/event_snip.htm
+++ b/templates/event_snip.htm
@@ -1,7 +1,7 @@
 <p>
 		<span class='item_prop'>
-			{% if event.username %}
-			<a href='/user/{{event.username}}'>
+			{% if event.user.username %}
+			<a href='/user/{{event.user.username}}'>
 				{{event.who_name}}
 			</a>
 			{% else %}
@@ -11,11 +11,12 @@
         is 
         <span class='item_prop'>{{event.what}}</span>
         at
-        <span class='item_prop'>{{event.where_name}}</span>
+        <span class='item_prop'><a href="/place/{{event.place.lat}}/{{event.place.lon}}/{{event.place.place_name}}">{{event.place.place_name}}</a></span>
         from 
-        <span class='item_prop'>{{event.when_start}}</span>
-        to 
-        <span class='item_prop'>{{event.when_end}}</span>
+        <span class='item_prop adjust_date'>{{event.when_start}}</span>
+        until 
+
+        <span class='item_prop adjust_date'>{{event.when_end}}</span>
         , who knows 
         <span class='item_prop'>{{event.skill}}</span>
         and would like to sit next to
